PCS BAckup 26Dec2023/Backup-Source/objects/GCP_Trade_Partner_DOH_Report_Test__c.object
<CustomObject>
    <fields>
        <fullName>GCP_SF_Account_Code__c</fullName>
        <label>GCP SF Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_SF_Id__c</fullName>
        <label>GCP SF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Flag__c</fullName>
        <label>High Flag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Flag__c</fullName>
        <label>Low Flag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <label>Package Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Partner_Name__c</fullName>
        <label>Trade Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Child_Identifier__c</fullName>
        <formula>Trade_Partner_Name__c+&apos;_&apos;+Package_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique_Child_Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_W1__c</fullName>
        <formula>W1_QOH__c  *  WAC_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value_W1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_W2__c</fullName>
        <formula>W2_QOH__c  *  WAC_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value_W2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_W3__c</fullName>
        <formula>W3_QOH__c *  WAC_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value_W3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP Trade Partner DOH Reports Test</relationshipLabel>
        <relationshipName>GCP_Trade_Partner_DOH_Reports_Test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Distribution_Center_Address__c</fullName>
        <label>Distribution Center Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Distribution_Center_City__c</fullName>
        <label>Distribution Center City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Distribution_Center_Name__c</fullName>
        <label>Distribution Center Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Distribution_Center_State__c</fullName>
        <label>Distribution Center State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Distribution_Center_Zip__c</fullName>
        <label>Distribution Center Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_Date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP Trade Partner DOH Reports Test</relationshipLabel>
        <relationshipName>GCP_Trade_Partner_DOH_Reports_Test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sum_Average_Sales__c</fullName>
        <label>Sum Average Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_DOH__c</fullName>
        <label>W1 DOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W1_Day__c</fullName>
        <label>W1 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W1_QOH__c</fullName>
        <label>W1 QOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W1_QTY_Sold__c</fullName>
        <label>W1 QTY Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_DOH__c</fullName>
        <label>W2 DOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_Day__c</fullName>
        <label>W2 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W2_QOH__c</fullName>
        <label>W2 QOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_QTY_Sold__c</fullName>
        <label>W2 QTY Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W3_DOH__c</fullName>
        <label>W3 DOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W3_Day__c</fullName>
        <label>W3 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W3_QOH__c</fullName>
        <label>W3 QOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W3_QTY_Sold__c</fullName>
        <label>W3 QTY Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAC_Price__c</fullName>
        <label>WAC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAC_Value__c</fullName>
        <label>WAC Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>GCP Trade Partner DOH Report Test</label>
    <nameField>
        <displayFormat>GCP trade-rep-{0000}</displayFormat>
        <label>GCP Trade Partner DOH Report Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Trade Partner DOH Report Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>